// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BasicAnswer should render with description 1`] = `
<div>
  <Field
    disabled={false}
    last={false}
  >
    <Label
      bold={true}
      htmlFor="answer-label-ansID1"
    >
      Label
    </Label>
    <withChangeHandler(WrappingInput)
      bold={true}
      data-autofocus={true}
      data-test="txt-answer-label"
      id="answer-label-ansID1"
      name="label"
      onBlur={[MockFunction]}
      onChange={[MockFunction]}
      value=""
    />
  </Field>
  <Field
    disabled={false}
    last={false}
  >
    <Label
      bold={true}
      htmlFor="answer-description-ansID1"
    >
      Description (optional)
    </Label>
    <withChangeHandler(WrappingInput)
      cols="30"
      data-test="txt-answer-description"
      id="answer-description-ansID1"
      name="description"
      onBlur={[MockFunction]}
      onChange={[MockFunction]}
      rows="5"
      value="Answer description"
    />
  </Field>
  <BasicAnswer__ToggleWrapper
    data-test="toggle-wrapper"
    disabled={false}
  >
    <BasicAnswer__InlineField>
      <Label
        bold={true}
        for="toggle-or-option"
      >
        "Or" option
      </Label>
      <ToggleSwitch
        checked={false}
        data-test="toggle-or-option"
        hideLabels={false}
        id="toggle-or-option"
        name="toggle-or-option"
        onChange={[Function]}
      />
    </BasicAnswer__InlineField>
  </BasicAnswer__ToggleWrapper>
  <div>
    This is the child component
  </div>
</div>
`;

exports[`BasicAnswer should render without description 1`] = `
<div>
  <Field
    disabled={false}
    last={false}
  >
    <Label
      bold={true}
      htmlFor="answer-label-ansID1"
    >
      Label
    </Label>
    <withChangeHandler(WrappingInput)
      bold={true}
      data-autofocus={true}
      data-test="txt-answer-label"
      id="answer-label-ansID1"
      name="label"
      onBlur={[MockFunction]}
      onChange={[MockFunction]}
      value=""
    />
  </Field>
  <BasicAnswer__ToggleWrapper
    data-test="toggle-wrapper"
    disabled={false}
  >
    <BasicAnswer__InlineField>
      <Label
        bold={true}
        for="toggle-or-option"
      >
        "Or" option
      </Label>
      <ToggleSwitch
        checked={false}
        data-test="toggle-or-option"
        hideLabels={false}
        id="toggle-or-option"
        name="toggle-or-option"
        onChange={[Function]}
      />
    </BasicAnswer__InlineField>
  </BasicAnswer__ToggleWrapper>
  <div>
    This is the child component
  </div>
</div>
`;
